--- a/MeetMeApp.Web/Pages/Shared/_Layout.cshtml
+++ b/MeetMeApp.Web/Pages/Shared/_Layout.cshtml
@@ -47,5 +47,9 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }
+
 </body>
 </html>
